# vermouth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: common.h
src/Win9x/: compiler.h  dd2.cpp  dllmain.cpp  dllmain.h  dosio.h  ini.cpp  ini.h  oemtext.cpp  scrnmng.h  subwind.cpp  subwind.h  trace.cpp  trace.h
src/codecnv/: textcnv.c  textcnv.h
src/common/: arc.c  arc.h  arcfunc.h  bmpdata.c  profile.c  strres.c  strres.h  textfile.c  unzip.c
src/generic/: cmndraw.c  keydisp.c  keydisp.h
src/vermouth/: midimod.c  midinst.c  midiout.c
src/vermouth/CVS/: Entries
